# bot-template

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.jinja  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.jinja  LICENSE.md  README.md  README.md.jinja  advanced-deploy.md.jinja  async-box.md  changelog.md  cookiecutter.json  copier.yaml  docker-compose.dev.yml  docker-compose.yml.jinja  example.env  pyproject.toml.jinja  setup.cfg  {% if from_ccsteam %}.gitlab-ci.yml{% endif %}.jinja
app/: logger.py  main.py  (+1 more)
{{cookiecutter.bot_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  async-box.md  example.env  pyproject.toml  setup.cfg
{{cookiecutter.bot_name}}/app/: commands.py  main.py
{{cookiecutter.bot_name}}/app/api/dependencies/: status_recipient.py
{{cookiecutter.bot_name}}/app/api/endpoints/: botx.py
{{cookiecutter.bot_name}}/app/api/error_handlers/: unknown_bot.py
{{cookiecutter.bot_name}}/app/bot/: bot.py
{{cookiecutter.bot_name}}/app/bot/commands/: common.py
{{cookiecutter.bot_name}}/app/bot/dependencies/: crud.py  errors.py  external_cts.py
{{cookiecutter.bot_name}}/app/db/: events.py  models.py  sqlalchemy.py
{{cookiecutter.bot_name}}/app/db/botx/: models.py  repo.py
{{cookiecutter.bot_name}}/app/db/migrations/: env.py
{{cookiecutter.bot_name}}/app/resources/: strings.py
{{cookiecutter.bot_name}}/app/resources/templates/: chat_created.txt.mako  help.txt.mako
{{cookiecutter.bot_name}}/app/services/: botx_user_search.py
{{cookiecutter.bot_name}}/app/settings/: config.py  events.py  logger.py
{{cookiecutter.bot_name}}/app/settings/environments/: base.py  dev.py  prod.py  test.py
{{cookiecutter.bot_name}}/scripts/: build  format  lint  test  test_db
{{cookiecutter.bot_name}}/scripts/pg-init-scripts/: create-multiple-postgresql-databases.sh
{{cookiecutter.bot_name}}/tests/: conftest.py  utils.py
{{cookiecutter.bot_name}}/tests/fixtures/: database.py  printer.py
{{cookiecutter.bot_name}}/tests/test_api/test_endpoints/: test_botx.py
{{cookiecutter.bot_name}}/tests/test_bot/test_commands/: test_common.py
{{cookiecutter.bot_name}}/tests/test_bot/test_dependencies/: test_crud.py  test_external_cts.py
{{cookiecutter.bot_name}}/tests/test_db/: test_migrations.py  test_redis.py
{{cookiecutter.bot_name}}/tests/test_db/test_botx/: test_crud.py  test_models.py
{{cookiecutter.bot_name}}/tests/test_services/: test_botx_user_search.py
{{cookiecutter.bot_name}}/tests/test_settings/: test_config.py
{{cookiecutter.bot_project_name}}/: .gitlab-ci.yml  Dockerfile  README.md  advanced-deploy.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  example.env  pyproject.toml  setup.cfg
{{cookiecutter.bot_project_name}}/app/: logger.py  main.py  settings.py
{{cookiecutter.bot_project_name}}/app/api/: routers.py
{{cookiecutter.bot_project_name}}/app/api/dependencies/: bot.py
{{cookiecutter.bot_project_name}}/app/api/endpoints/: botx.py
{{cookiecutter.bot_project_name}}/app/bot/: bot.py
{{cookiecutter.bot_project_name}}/app/caching/: callback_redis_repo.py  redis_repo.py
{{cookiecutter.bot_project_name}}/app/db/: crud.py  events.py  models.py  sqlalchemy.py
{{cookiecutter.bot_project_name}}/app/resources/: strings.py
{{cookiecutter.bot_project_name}}/app/schemas/: domains.py  enums.py  notification_callback.py
{{cookiecutter.bot_project_name}}/app/services/: answer_error.py  botx_user_search.py  healthcheck.py
{{cookiecutter.bot_project_name}}/app/settings/: config.py  events.py  logger.py
{{cookiecutter.bot_project_name}}/scripts/: build  format  lint  so_pythonic.txt  test  test_db
{{cookiecutter.bot_project_name}}/tests/: conftest.py
{{cookiecutter.bot_project_name}}/tests/commands/: test_callback_redis_repo.py  test_common.py  test_exceptions_logging.py
{{cookiecutter.bot_project_name}}/tests/endpoints/: test_botx.py
{{cookiecutter.bot_project_name}}/tests/fixtures/: database.py
{{cookiecutter.bot_project_name}}/tests/test_bot/: test_command_list.py
{{cookiecutter.bot_project_name}}/tests/test_commands/: test_common.py
{{cookiecutter.bot_project_name}}/tests/test_db/: test_crud.py  test_migrations.py
{{cookiecutter.bot_project_name}}/tests/test_endpoints/: test_botx.py
{{cookiecutter.bot_project_name}}/tests/test_schemas/: test_enums.py  test_uuid.py
{{cookiecutter.bot_project_name}}/tests/test_services/: test_botx_user_search.py
{{cookiecutter.bot_project_name}}/tests/test_settings/: test_config.py  test_logging.py
(+74 files in other folders)
