# https://python-poetry.org/docs/

[tool.poetry]
name = "{{cookiecutter.bot_project_name}}"
version = "0.1.0"
description = "{{cookiecutter.bot_short_description}}"
authors = []


[tool.poetry.dependencies]
python = "~3.10"

botx = { git = "https://github.com/ExpressApp/pybotx", rev = "e9155bd" }
# TODO: Add pybotx-fsm

fastapi = "~0.70.1"
uvicorn = "~0.16.0"

aioredis = "~1.3.1"
loguru = ">=0.6.0,<0.7.0"
mako = "~1.1.4"
pydantic = { version = "~1.8.2", extras = ["dotenv"] }

alembic = "~1.7.5"
SQLAlchemy = "~1.4.28"
asyncpg = "~0.25.0"  # DB backend for application
psycopg2-binary = "~2.9.2"  # DB backend for alembic (migration tool)


[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.1"
autoflake = "1.4.0"
black = "21.12b0"
isort = "5.10.1"
mypy = "0.910.0"
wemake-python-styleguide = "0.16.0"

pytest = "^6.2.5"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0"
asgi-lifespan = "^1.0.1"
respx = "^0.19.1"
typing-extensions = { version = "^3.7.4", python = "<3.8" }

markdown = "3.3.6"  # https://github.com/python-poetry/poetry/issues/4777

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
